<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F7"
    tools:context=".view.HomeFragment">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="36dp">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBarLayout"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="12dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="34dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="19dp"
                        android:src="@drawable/ic_beer_yellow" />

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="19dp"
                        android:src="@drawable/ic_right_title" />
                </RelativeLayout>

            </com.google.android.material.appbar.AppBarLayout>

            <LinearLayout
                android:id="@+id/headLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/yellow_background"
                tools:layout_editor_absoluteX="36dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="42dp"
                        android:fontFamily="@font/quicksand_bold"
                        android:lines="2"
                        android:text="@string/welcome_app"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginVertical="12dp">

                        <SearchView
                            android:id="@+id/brewerySearch"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="16dp"
                            android:layout_marginTop="26dp"
                            android:layout_marginBottom="30dp"
                            android:background="@color/white"
                            android:closeIcon="@null"
                            android:iconifiedByDefault="false"
                            android:queryHint="@string/search_breweries"
                            android:searchIcon="@drawable/ic_search"
                            android:textCursorDrawable="@null" />

                        <ImageView
                            android:layout_width="14dp"
                            android:layout_height="19dp"
                            android:layout_alignParentRight="true"
                            android:layout_marginTop="40dp"
                            android:layout_marginEnd="32dp"
                            android:src="@drawable/ic_microphone" />

                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/quicksand_bold"
                        android:lines="2"
                        android:text="@string/select_state"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/labelNoneTerm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/headLayout">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_bold"
                    android:gravity="center"
                    android:text="@string/no_word_typed_message"
                    android:textColor="#333333"
                    android:textSize="22sp"
                    tools:layout_editor_absoluteX="16dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="36dp"
                    android:gravity="center"
                    android:text="@string/try_again_message"
                    android:textSize="16sp"
                    tools:layout_editor_absoluteX="16dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/labelBrewery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/headLayout">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_bold"
                    android:gravity="center"
                    android:text="@string/breweries_not_found_message"
                    android:textColor="#333333"
                    android:textSize="22sp"
                    tools:layout_editor_absoluteX="16dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="36dp"
                    android:gravity="center"
                    android:text="@string/try_again_message"
                    android:textSize="16sp"
                    tools:layout_editor_absoluteX="16dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:orientation="vertical"
                android:visibility="visible"
                app:layout_constraintTop_toBottomOf="@+id/headLayout">

                <Spinner
                    android:id="@+id/statesSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="40dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="26dp"
                    android:fontFamily="@font/quicksand_bold"
                    android:text="@string/recycler_view_headline"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    tools:layout_editor_absoluteX="6dp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:clipToPadding="false"
                    android:paddingBottom="40dp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>