<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F7"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="12dp">

            <ImageView
                android:id="@+id/arrowBack"
                android:layout_width="20dp"
                android:layout_height="14dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="19dp"
                android:layout_marginTop="7dp"
                android:src="@drawable/ic_arrow" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="56dp"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/brewery_details"
                android:textColor="#FFCC00"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="16dp" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="19dp"
                android:src="@drawable/ic_right_title" />
        </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        tools:layout_editor_absoluteX="36dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
            tools:layout_editor_absoluteX="36dp">

            <ImageView
                android:id="@+id/headLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/yellow_background"
                android:orientation="horizontal" />

            <ImageView
                android:id="@+id/detailsBox"
                android:layout_width="480dp"
                android:layout_height="530dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/details_background"
                android:elevation="10dp"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="36dp" />

            <ImageView
                android:id="@+id/circleLetter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="50dp"
                android:layout_marginTop="70dp"
                android:background="@drawable/circle_letter"
                android:elevation="10dp"
                tools:layout_editor_absoluteX="36dp" />

            <TextView
                android:id="@+id/breweryInitial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="65dp"
                android:layout_marginTop="72dp"
                android:elevation="10dp"
                android:text="C"
                android:textColor="#8A7251"
                android:textSize="35dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="55dp"
                android:layout_marginEnd="70dp"
                android:elevation="10dp"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/breweryName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_bold"
                    android:gravity="center"
                    android:text="Brewery C"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/breweryRating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="3,9"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        tools:layout_editor_absoluteX="16dp" />

                    <ImageView
                        android:id="@+id/detailScreenStar1"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="5dp"
                        android:src="@drawable/ic_empty_star" />

                    <ImageView
                        android:id="@+id/detailScreenStar2"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="5dp"
                        android:src="@drawable/ic_empty_star" />

                    <ImageView
                        android:id="@+id/detailScreenStar3"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="5dp"
                        android:src="@drawable/ic_empty_star" />

                    <ImageView
                        android:id="@+id/detailScreenStar4"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="5dp"
                        android:src="@drawable/ic_empty_star" />

                    <ImageView
                        android:id="@+id/detailScreenStar5"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="5dp"
                        android:src="@drawable/ic_empty_star" />

                </LinearLayout>

                <TextView
                    android:id="@+id/numberOfRatings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="+ de 500 avaliações"
                    android:textColor="#A5A5A5"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="480dp"
                android:layout_height="410dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="160dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="40dp"
                android:elevation="10dp"
                android:orientation="vertical"
                android:padding="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="22dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/type"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/breweryType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginEnd="22dp"
                        android:text="Bar"
                        android:textColor="@color/black"
                        android:textFontWeight="300"
                        android:textSize="16sp" />
                </RelativeLayout>

                <View style="@style/Divider" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="22dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/website"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/brewerySite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginEnd="22dp"
                        android:text="www.Bar.com"
                        android:textColor="@color/black"
                        android:textFontWeight="300"
                        android:textSize="16sp" />
                </RelativeLayout>

                <View style="@style/Divider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingEnd="20dp"
                        android:text="@string/address"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/breweryAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginStart="40dp"
                        android:layout_marginEnd="22dp"
                        android:lines="3"
                        android:text="Avenida Brasil, 723"
                        android:textColor="@color/black"
                        android:textFontWeight="300"
                        android:textSize="16sp" />
                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/mapButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="22dp">

                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_marginTop="33dp"
                        android:src="@drawable/ic_map" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="26dp"
                        android:layout_marginTop="31dp"
                        android:text="@string/find_address"
                        android:textColor="@color/black"
                        android:textFontWeight="300"
                        android:textSize="16sp" />
                </RelativeLayout>

                <View style="@style/Divider" />

                <Button
                    android:id="@+id/ratingButton"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:backgroundTint="#FFCC00"
                    android:text="@string/rate_brewery"
                    android:textColor="@color/black" />
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>